styling footer, fixed header overflow issue

--- a/src/App.css
+++ b/src/App.css
@@ -17,5 +17,4 @@ a {
 .main-app-container {
   display: flex;
   flex-direction: column;
-  max-width: 100vw;
 }
